# backend-builder

./: .env.example  pyproject.toml
src/: main.py
src/agent/: graph.py  nodes.py  parsers.py  prompt.py  state.py  tools.py
src/api/v1/: builder.py
src/core/: config.py
src/models/: blueprint.py  refinement.py  request.py
